--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -18,6 +18,9 @@ include ./modals/modal-success
 //- Blocks
 
 include ./blocks/intro
+include ./blocks/features
+include ./blocks/videoapp
+include ./blocks/benefits
 
 //- Mixins
 
