--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,13 +1,60 @@
 .header {
-  padding: 28px 0;
+  padding: 40px 0;
+  position: absolute;
+  width: 100%;
+  // top: 0;
+  z-index: 200;
+  min-height: 150px;
 
-  background-color: $color-neon-blue;
+  // background-color: $color-neon-blue;
+  background-color: transparent;
 
   .container {
     display: flex;
+    justify-content: space-between;
   }
 
   &__logo {
     color: $color-default-white;
+    transition: opacity $trans-default;
+    cursor: pointer;
+
+    @include hover-focus {
+      opacity: 0.8;
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .header .container {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .header {
+    min-height: unset;
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    padding: 24px 0;
+  }
+
+  .header .container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@media (max-width: 550px) {
+  .header .container {
+    flex-direction: column;
+  }
+
+  .header__logo {
+    margin-bottom: 24px;
   }
 }
