--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -16,3 +16,57 @@
   font-display: swap;
   src: url("../fonts/.woff2") format("woff2");
 }
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "montserrat-bold";
+
+  font-display: swap;
+  src: url("../fonts/montserrat-bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "montserrat-bold";
+
+  font-display: swap;
+  src: url("../fonts/montserrat-bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "open-sans-regular";
+
+  font-display: swap;
+  src: url("../fonts/open-sans-regular.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "open-sans-regular";
+
+  font-display: swap;
+  src: url("../fonts/open-sans-regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 600;
+  font-family: "montserrat-semi-bold";
+
+  font-display: swap;
+  src: url("../fonts/montserrat-semi-bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 600;
+  font-family: "montserrat-semi-bold";
+
+  font-display: swap;
+  src: url("../fonts/montserrat-semi-bold.woff2") format("woff2");
+}
