--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,11 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/input-upload";
+@import "blocks/intro";
+@import "blocks/title";
+@import "blocks/features";
+@import "blocks/videoapp";
+@import "blocks/benefits";
 
 // ---------------------------------
 
