--- a/source/pug/components/base/footer.pug
+++ b/source/pug/components/base/footer.pug
@@ -1,3 +1,34 @@
 mixin footer(footerMods)
+  -
+    const footerSocial = [
+      {
+        href: "www.facebook.com",
+        icon: "icon-facebook",
+      },
+      {
+        href: "www.vkontakte.com",
+        icon: "icon-vk",
+      },
+      {
+        href: "www.watsapp.com",
+        icon: "icon-whatsapp",
+      },
+      {
+        href: "www.telegram.com",
+        icon: "icon-telegram",
+      },
+    ]
   footer.footer(class=footerMods)
     .container
+      if(currentUrl === "index.html")
+        //- lighthouse снимает 10 баллов SEO за <a> без href
+        span.footer__logo YOUR LOGO HERE
+      else
+        a.footer__logo(href="index.html", aria-label="Переход на главную") YOUR LOGO HERE
+      ul.footer__social-list
+        each link in footerSocial
+          li.footer__social-item
+            a.footer__social-link(href=link.href)
+              +icon(link.icon, 30, 30)
+      p По всем вопросам обращайтесь&nbsp;
+        a(href="mailto:support.website.com") support.website.com
