--- a/source/pug/components/base/header.pug
+++ b/source/pug/components/base/header.pug
@@ -2,16 +2,16 @@ mixin header(headerMods, currentUrl)
   -
     const headerLinks = [
       {
-        href: "index.html",
-        text: "Главная"
+        href: "#",
+        text: "Блог"
       },
       {
         href: "#",
-        text: "Страница 2"
+        text: "Безопасность"
       },
       {
         href: "#",
-        text: "Страница 3"
+        text: "Помощь"
       },
     ]
 
@@ -19,9 +19,9 @@ mixin header(headerMods, currentUrl)
     .container
       if(currentUrl === "index.html")
         //- lighthouse снимает 10 баллов SEO за <a> без href
-        span.header__logo Логотип
+        span.header__logo YOUR LOGO HERE
       else
-        a.header__logo(href="index.html", aria-label="Переход на главную") Логотип
+        a.header__logo(href="index.html", aria-label="Переход на главную") YOUR LOGO HERE
       nav.main-nav
         button.main-nav__toggle.btn-reset(type="button", aria-label="Переключатель отображения меню", aria-pressed="false")
           +icon("icon-burger", 20, 20)
